Added some CSS to prevent immediate eye-bleeding.

--- a/examples/sycamore-auth/index.html
+++ b/examples/sycamore-auth/index.html
@@ -4,18 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sycamore With Supabase Auth Example</title>
-    <style>
-      body {
-        font-family: monospace;
-      }
-      .form {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 0.5em;
-      }
-    </style>
+    <title>Sycamore with Supabase Auth</title>
+    <link data-trunk rel="css" href="./app.css" />
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   </head>
   <body></body>
